# Corewar_VM

./: CMakeLists.txt  README.md  Save.c  tototest.txt
includes/: corewar.h
libft/: Makefile
libft/ft_printf/includes/: ft_printf.h
libft/libft/includes/: libft.h
libft/libft/srcs/: ft_digitlen.c  ft_limits.c  ft_savetext.c
srcs/VM/: exit.c  main.c
srcs/VM/control_param_corewar/: champ_rec_info.c  check_arg.c  check_nbr_champ.c
srcs/VM/create_champion/: create_champion.c
srcs/VM/exit/: exit.c
srcs/VM/functions_cycle_management/: cycle_management.c
srcs/VM/functions_opcode/: check_op_params.c  check_op_params1.c  check_op_params2.c  check_op_params3.c  exec_process.c  op_code.c  op_fork.c  opcode_add.c  opcode_aff.c  opcode_and.c  opcode_fork.c  opcode_ld.c  opcode_ldi.c  opcode_lfork.c  opcode_live.c  opcode_lld.c  opcode_lldi.c  opcode_or.c  opcode_st.c  opcode_sti.c  opcode_sub.c  opcode_xor.c  opcode_zjmp.c  params_opcode.c
srcs/VM/functions_process_live/: cycle_nb_live.c  stop_corewar.c
srcs/VM/functions_vm/: create_vm.c
srcs/VM/my_free/: my_memalloc.c
srcs/VM/print/: print_vm.c
srcs/corewar/: main.c
srcs/corewar/create_champion/: create_champion.c
srcs/corewar/functions_cycle_management/: cycle_management.c
srcs/corewar/functions_load_champion/: load_champion.c
srcs/corewar/functions_opcode/: exec_process.c  op_fork.c
srcs/corewar/functions_vm/: create_vm.c
srcs/corewar/print/: print_vm.c
test/: Makefile
test/utils/: typescript
vm_champs/: totozaz
vm_champs/champs/: toto.cor
vm_champs/champs/examples/: test0.cor  (+4 more)
